--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         <h5>Student Applying Leave Online(Web Application) </h5>
                         <p>It's a webpage where student can apply leave online. The leave will be approved or disapproved by the administrator.   
                             
-                            <br><b>Technologies and Languages used: HTML,CSS,PHP,JAVASCRIPT,MYSQL</b>
+                            <br><b>Technologies and Languages used:C# asp.net</b>
                             </p>
                         
                     </div><!-- / carousel-post -->
